Fixed scrolling and overflow of top level div

--- a/css/hdu.styl
+++ b/css/hdu.styl
@@ -18,6 +18,7 @@ section
   height 90%
   border 1px solid $blue
   margin 40px 40px
+  overflow visible
   
   article.header
     position absolute
