--- a/css/header.styl
+++ b/css/header.styl
@@ -9,6 +9,7 @@ table.header
   color $black
   width 300px
   border 0
+  overflow scroll
   
   tbody
     overflow auto
