--- a/css/image.styl
+++ b/css/image.styl
@@ -31,7 +31,7 @@ canvas
   cursor crosshair
   
   canvas
-    position absolute
+    position relative
 
 progress
   .read-image
