--- a/css/index.styl
+++ b/css/index.styl
@@ -29,6 +29,7 @@ html, body
 
 #luminosity
   height 100%
+  overflow auto
 
   #hdus
     width 100%
