--- a/css/table.styl
+++ b/css/table.styl
@@ -1,17 +1,18 @@
 table.fits-table
   font-size 11px
-  
   width 800px
   text-align left
   border-spacing 0
   border-collapse collapse
   margin 20px
+  max-height 600px
   
   thead
     display table-header-group
   
   tbody
     display table-row-group
+    overflow scroll
   
     tr
       display table-row
